apps/atuin/manifests/atuin-server/ingress-cloudflare.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudflare-ingress
  namespace: atuin
spec:
  ingressClassName: cloudflare
  rules:
  - host: atuin.ankhmorpork.thaum.xyz
    http:
      paths:
      - backend:
          service:
            name: atuin
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - atuin.ankhmorpork.thaum.xyz
    secretName: atuin-tls
